--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,4 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-
+.bg-blacking{
+  background: rgba( 255, 255, 255, 0 );
+  backdrop-filter: blur( 3px ); 
+}
