--- a/src/app/Components/Ui/extension.css
+++ b/src/app/Components/Ui/extension.css
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 468px) {
     .onrespo {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: row-reverse;
       justify-content: center;
       align-items: center;
     }
