--- a/src/app/Components/Ui/extension.css
+++ b/src/app/Components/Ui/extension.css
@@ -7,3 +7,9 @@
       align-items: center;
     }
   }
+
+  .gridGeneral {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    grid-gap: 5px;
+  }
