Modified team member section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ html {
 }
 
 .Member2 {
-  background-image: url("./Components/Images/member2.jpg");
+  background-image: url("./Components/Images/member4.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
