new check point

--- a/src/app/Components/Ui/extension.css
+++ b/src/app/Components/Ui/extension.css
@@ -19,6 +19,13 @@
       padding: 10px; 
     }
 
+    .gridGeneral{
+      padding: 10px;
+    }
+
+    .padder{
+      padding: 10px;
+    }
   }
 
   .gridGeneral {
