new code is added now

--- a/src/app/Components/Ui/extension.css
+++ b/src/app/Components/Ui/extension.css
@@ -13,6 +13,10 @@
       padding: 10px; 
     }
 
+    .myDirection{
+      padding-top: 10%;
+    }
+
     .gridGeneral{
       padding: 10px;
     }
