--- a/src/app/Components/Ui/extension.css
+++ b/src/app/Components/Ui/extension.css
@@ -39,3 +39,9 @@
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   grid-gap: 5px;
 }
+
+.gridGeneralY {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 5px;
+}
