feat: Update image paths and add essicacarpetcleaning image to ProjectManager array

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,9 @@ html {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+.gridGeneralY {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 35px;
+}
