--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,4 +99,5 @@ html {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 35px;
+  align-items: center;
 }
