Update background image in globals.css to use WebP format for improved performance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ html {
   background-position: center;
 }
 .sectionB {
-  background-image: url("./Components/Images/develop.jpg");
+  background-image: url("./Components/Images/develop.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
